objects/TEMarketing__Distributor_Rank__c.object
<CustomObject>
    <fields>
        <fullName>TEMarketing__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Distributor_Name__c</fullName>
        <formula>TEMarketing__Distributor__r.Name</formula>
        <label>Distributor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>TEMarketing__Distributor__c</referenceTo>
        <relationshipLabel>Distributor Rank Records</relationshipLabel>
        <relationshipName>Distributor_Rank_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Exclude_From_Round_Robin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude this distributor rank record from round robin MQL assignment</description>
        <inlineHelpText>Exclude this distributor rank record from round robin MQL assignment</inlineHelpText>
        <label>Exclude From Round Robin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Filter_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributor_Rank_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__GIBU_Region__c</fullName>
        <formula>TEXT(TEMarketing__GIBU__c) + &apos;_&apos; +  TEXT(TEMarketing__Region__c)</formula>
        <label>GIBU &amp; Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__GIBU__c</fullName>
        <label>GIBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Relays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Last_Assignment__c</fullName>
        <label>Last Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Millisecond__c</fullName>
        <label>Millisecond</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Rank__c</fullName>
        <label>Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Unique_Key__c</fullName>
        <description>A composite key of Distributor Name, Region, and GIBU which must be unique</description>
        <inlineHelpText>A composite key of Distributor Name, Region, and GIBU which must be unique</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Distributor Rank</label>
    <listViews>
        <fullName>BU_AD_M</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__GIBU__c</field>
            <operation>equals</operation>
            <value>&quot;Aerospace, Defense &amp; Marine&quot;</value>
        </filters>
        <label>BU - AD&amp;M</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BU_D_D</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__GIBU__c</field>
            <operation>equals</operation>
            <value>Data &amp; Devices</value>
        </filters>
        <label>BU - D&amp;D</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BU_Industrial</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__GIBU__c</field>
            <operation>equals</operation>
            <value>Industrial</value>
        </filters>
        <label>BU - Industrial</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor_Arrow</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>Arrow</value>
        </filters>
        <label>Distributor - Arrow</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor_Avnet</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>Avnet</value>
        </filters>
        <label>Distributor - Avnet</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor_Element14</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>Element14</value>
        </filters>
        <label>Distributor - Element14</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor_Farnell_E14</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>Farnell E14</value>
        </filters>
        <label>Distributor - Farnell E14</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor_Future</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>Future</value>
        </filters>
        <label>Distributor - Future</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor_RS_Components</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>RS Components</value>
        </filters>
        <label>Distributor - RS Components</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Distributor_TTI</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>TTI</value>
        </filters>
        <label>Distributor - TTI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Heilind</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Distributor__c</field>
            <operation>equals</operation>
            <value>Heilind</value>
        </filters>
        <label>Distributor - Heilind</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TEMarketing__All</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Exclude_From_Round_Robin__c</columns>
        <columns>TEMarketing__Distributor__c</columns>
        <columns>TEMarketing__GIBU__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Filter_Agent__c</columns>
        <columns>TEMarketing__GIBU_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RANK-{00000}</displayFormat>
        <label>Distributor Rank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Rank Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>